fix: use w3c standard for scrollbar and change the content background style

--- a/app/globals.css
+++ b/app/globals.css
@@ -646,26 +646,8 @@
   }
   body {
     @apply bg-background text-foreground;
-  }
-
-  *::-webkit-scrollbar {
-    width: 0.4rem;
-    padding: 0.5rem;
-  }
-
-  *::-webkit-scrollbar-track {
-    background: var(--background);
-    margin: 5px;
-  }
-
-  *::-webkit-scrollbar-thumb {
-    background-color: var(--muted);
-    border-radius: var(--radius-xl);
-  }  
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--muted-foreground);
-    border-radius: var(--radius-xl);
+    scrollbar-width: thin;
+    scrollbar-color: var(--muted) transparent;
   }
 }
 
